ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: testingress
  labels:
    name: testingress
  annotations:
    yarp.ingress.kubernetes.io/affinity: Service
    kubernetes.io/ingress.class: yarp
spec:
  rules:
  - host: ufo.localtest.me
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: nginx
            port: 
              number: 80
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: testingressip
  labels:
    name: testingressip
  annotations:
    yarp.ingress.kubernetes.io/affinity: ServiceCusterIP
    kubernetes.io/ingress.class: yarp
spec:
  rules:
  - host: ufoip.localtest.me
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: nginx
            port: 
              name: http
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: testingressendpoints
  labels:
    name: testingressendpoints
  annotations:
    yarp.ingress.kubernetes.io/affinity: RandomPod
    kubernetes.io/ingress.class: yarp
spec:
  rules:
  - host: ufoendpoints.localtest.me
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: nginx
            port: 
              name: http
